--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -20,6 +20,8 @@
 	<string>MacOSX</string>
 	<key>PlexFrameworkVersion</key>
 	<string>1</string>
+	<key>PlexMediaContainer</key>
+	<string>M4V</string>
 	<key>PlexPluginDebug</key>
 	<string>1</string>
 	<key>PlexPluginMode</key>
