--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
@@ -16,6 +16,8 @@
 	<string>hook</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>PlexClientCapabilities</key>
+	<string>protocols=shoutcast</string>
 	<key>PlexClientPlatforms</key>
 	<string>MacOSX,iOS</string>
 	<key>PlexFrameworkVersion</key>
@@ -23,6 +25,12 @@
 	<key>PlexMediaContainer</key>
 	<array>
 		<string>M4V</string>
+		<string>MP3</string>
+	</array>
+	<key>PlexAudioCodec</key>
+	<array>
+		<string>AAC</string>
+		<string>MP3</string>
 	</array>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
